--- a/ProyectoFinal-Aplicada2/_Imports.razor
+++ b/ProyectoFinal-Aplicada2/_Imports.razor
@@ -15,3 +15,7 @@
 @inject VentasControllers ventascontroller
 @inject UsuariosControllers usuariocontroller
 @inject PagosControllers pagoscontroller
+@using Blazored.Toast
+@using Blazored.Toast.Services
+@inject IToastService toastService
+
