--- a/ProyectoFinal-Aplicada2/Shared/MainLayout.razor
+++ b/ProyectoFinal-Aplicada2/Shared/MainLayout.razor
@@ -3,12 +3,11 @@
 <div class="sidebar">
     <NavMenu />
 </div>
-
 <div class="main">
     <div class="top-row px-4">
         <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+        <BlazoredToasts />
     </div>
-
     <div class="content px-4">
         @Body
     </div>
