--- a/ProyectoFinal-Aplicada2/_Imports.razor
+++ b/ProyectoFinal-Aplicada2/_Imports.razor
@@ -17,5 +17,7 @@
 @inject PagosControllers pagoscontroller
 @using Blazored.Toast
 @using Blazored.Toast.Services
+@using Blazored.Toast.Configuration
+
 @inject IToastService toastService
 
