--- a/ProyectoFinal-Aplicada2/Pages/ConsultaCompras.razor
+++ b/ProyectoFinal-Aplicada2/Pages/ConsultaCompras.razor
@@ -6,21 +6,21 @@
 
     <div class="col">
         <label for="desde_date" >Desdes</label>
-        <input id="desde_date" class="form-control" type="datetime-local" @bind="desdeFecha" @onclick="Filtrar" />
+        <input id="desde_date" class="form-control" type="datetime-local" @onfocusin="filtradoPorFecha" @onfocusout="filtradoPorFecha" @bind="desdeFecha"/>
     </div>
 
     <div class="col">
         <label for="hasta_date">Hasta</label>
-        <input id="hasta_date" class="form-control" type="datetime-local" @bind="hastaFecha" @onclick="Filtrar" />
+        <input id="hasta_date" class="form-control" type="datetime-local" @onfocusin="filtradoPorFecha" @onfocusout="filtradoPorFecha" @bind="hastaFecha"/>
         <input type="checkbox" @bind="fechaFiltro" />
     </div>
 
     <div class="col">
-        <input type="text" placeholder="Criterio" @onclick="Filtrar" @bind="Criterio" />
+        <input type="text"  class="form-control" placeholder="Criterio" @onclick="Filtrar" @bind="Criterio" />
     </div>
 
     <div class="col">
-        <select class="form-control" @bind="filtro">
+        <select class="form-control" @onclick="Filtrar" @bind="filtro">
             <option value="0">Todos</option>
             <option value="1">Id</option>
             <option value="2">ProveedorId</option>
@@ -82,73 +82,92 @@ else
 
     public List<Compras> listado { get; set; }
 
-    private void Filtrar()
+    private void filtradoPorFecha()
     {
-        int filtroIndex = Int32.Parse(filtro);
-
-        if (Criterio.Trim().Length > 0)
-        {
-            switch (filtroIndex)
-            {
-                //Todos
-                case 0:
-                    listado = comprascontroller.GetList(p => true);
-                    ListaCompras = listado;
-                    break;
-                //Int
-                case 1:
-                    int id = 0;
-                    if (int.TryParse(Criterio, out id))
-                    {
-                        id = Convert.ToInt32(Criterio);
-                        listado = comprascontroller.GetList(p => p.CompraId == id);
-                        ListaCompras = listado;
-                    }
-                    break;
-                //ProveedorId
-                case 2:
-                    int id2 = 0;
-                    if (int.TryParse(Criterio, out id2))
-                    {
-                        id2 = Convert.ToInt32(Criterio);
-                        listado = comprascontroller.GetList(p => p.ProveedorId == id2);
-                        ListaCompras = listado;
-                    }
-                    break;
-                //Itbis
-                case 3:
-                    decimal Itbis = 0;
-                    if (decimal.TryParse(Criterio, out Itbis))
-                    {
-                        Itbis = Convert.ToDecimal(Criterio);
-                        listado = comprascontroller.GetList(p => p.Itbis == Itbis);
-                        ListaCompras = listado;
-                    }
-                    break;
-                //Balance
-                case 4:
-                    decimal balance = 0;
-                    if (decimal.TryParse(Criterio, out balance))
-                    {
-                        balance = Convert.ToDecimal(Criterio);
-                        listado = comprascontroller.GetList(p => p.Balance == balance);
-                        ListaCompras = listado;
-                    }
-                    break;
-
-            }
-        }
-        else
-        {
-            listado = comprascontroller.GetList(p => true);
-            ListaCompras = listado;
-        }
-
-        if(fechaFiltro == true) 
+        try
         {
             ListaCompras = ListaCompras.Where(p => p.FechaCompra >= desdeFecha && p.FechaCompra <= hastaFecha).ToList();
         }
+        catch (Exception)
+        {
+
+            //wey klok
+        }
+        
     }
+
+    private void Filtrar()
+    {
+
+        try
+        {
+            int filtroIndex = Int32.Parse(filtro);
+
+            if (Criterio.Trim().Length > 0)
+            {
+                switch (filtroIndex)
+                {
+                    //Todos
+                    case 0:
+                        listado = comprascontroller.GetList(p => true);
+                        ListaCompras = listado;
+                        break;
+                    //Int
+                    case 1:
+                        int id = 0;
+                        if (int.TryParse(Criterio, out id))
+                        {
+                            id = Convert.ToInt32(Criterio);
+                            listado = comprascontroller.GetList(p => p.CompraId == id);
+                            ListaCompras = listado;
+                        }
+                        break;
+                    //ProveedorId
+                    case 2:
+                        int id2 = 0;
+                        if (int.TryParse(Criterio, out id2))
+                        {
+                            id2 = Convert.ToInt32(Criterio);
+                            listado = comprascontroller.GetList(p => p.ProveedorId == id2);
+                            ListaCompras = listado;
+                        }
+                        break;
+                    //Itbis
+                    case 3:
+                        decimal Itbis = 0;
+                        if (decimal.TryParse(Criterio, out Itbis))
+                        {
+                            Itbis = Convert.ToDecimal(Criterio);
+                            listado = comprascontroller.GetList(p => p.Itbis == Itbis);
+                            ListaCompras = listado;
+                        }
+                        break;
+                    //Balance
+                    case 4:
+                        decimal balance = 0;
+                        if (decimal.TryParse(Criterio, out balance))
+                        {
+                            balance = Convert.ToDecimal(Criterio);
+                            listado = comprascontroller.GetList(p => p.Balance == balance);
+                            ListaCompras = listado;
+                        }
+                        break;
+                }
+            }
+            else
+            {
+                listado = comprascontroller.GetList(p => true);
+                ListaCompras = listado;
+            }
+
+        }
+        catch (Exception)
+        {
+            //papichulo
+        }
+    }
+
 }
+
 
 
