--- a/ProyectoFinal-Aplicada2/Pages/ProductosComponent.razor
+++ b/ProyectoFinal-Aplicada2/Pages/ProductosComponent.razor
@@ -29,7 +29,6 @@
 <section class="form-register">
     
     <h3>Productos</h3>
-    <h3 class="form-text text-muted">@mensaje</h3>
     <EditForm Model="productos" OnValidSubmit="Guardar">
         <DataAnnotationsValidator />
         <label for="Id">ProductoId</label>
@@ -89,15 +88,14 @@
         <button type="submit" class="btn btn-success" @onclick="CalcularPrecioDeVenta">Guardar</button>
         <button type="button" class="btn btn-danger" @onclick="Eliminar">Eliminar</button>
         <button type="button" class="btn btn-primary">A ver si funciona</button>
-        <button class="btn btn-success" @onclick="@(() => toastService.ShowInfo("I'm a SUCCESS message with a custom title", "Error!"))">Success Toast</button>
 
     </EditForm>
+    
 
 
 </section>
 
 @code {
-    private string mensaje;
     Productos productos = new Productos();
 
     [Parameter]
@@ -115,16 +113,26 @@
     private void Nuevo()
     {
         this.productos = new Productos();
-        mensaje = string.Empty;
     }
 
     private void Guardar()
     {
-        if(productoscontrollers.Guardar(productos))
+        if(productos.ProductoId>0)
         {
-            mensaje = "Guardado correctamente";
+            productoscontrollers.Guardar(productos);
+            toastService.ShowSuccess("Has modificado el producto exitosamente", "Modificado!");
             this.productos = new Productos();
+
+        } else if(productos.ProductoId == 0)
+        {
+            productoscontrollers.Guardar(productos);
+            toastService.ShowSuccess("Has guardado el producto exitosamente", "Guardado!");
+            this.productos = new Productos();
+        } else
+        {
+            toastService.ShowError("No se guardar", "Error!");
         }
+
     }
 
 
@@ -132,12 +140,11 @@
     {
         if(productoscontrollers.Eliminar(productos.ProductoId))
         {
-            mensaje = "Eliminado correctamente";
+            toastService.ShowInfo("Se ha eliminado el producto correctamente", "Eliminado!");
             this.productos = new Productos();
-
         } else
         {
-            mensaje = "No se pudo Eliminar";
+            toastService.ShowError("No se pudo eliminar", "Error!");
         }
     }
 
@@ -147,10 +154,10 @@
         if(busca!=null)
         {
             this.productos = busca;
-            mensaje = "Producto encontrado";
+            toastService.ShowInfo("Has encontrado el producto","Encontrado!");
         } else
         {
-            mensaje = "No se pudo encontrar";
+            toastService.ShowWarning("No se ha podido encontrar el producto", "No encontrado!");
         }
     }
 
