--- a/ProyectoFinal-Aplicada2/_Imports.razor
+++ b/ProyectoFinal-Aplicada2/_Imports.razor
@@ -18,6 +18,6 @@
 @using Blazored.Toast
 @using Blazored.Toast.Services
 @using Blazored.Toast.Configuration
-
+@using ProyectoFinal_Aplicada2.Data;
 @inject IToastService toastService
 
